opam-version: "1.2"
name: "shortlink"
version: "0.0.1"
maintainer: "Kevin Ji"
authors: ["Kevin Ji"]
homepage: "https://github.com/mc10/shortlink"
bug-reports: "https://github.com/mc10/shortlink/issues"
dev-repo: "https://github.com/mc10/shortlink.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" { build & >= "1.1.1" }
  "core"
  "async"
  "cohttp"
  "cohttp-async"
  "ppxlib"
]
