opam-version: "2.0"
name: "shortlink"
version: "0.0.1"
maintainer: "Kevin Ji"
authors: ["Kevin Ji"]
homepage: "https://github.com/mc10/shortlink"
bug-reports: "https://github.com/mc10/shortlink/issues"
dev-repo: "git+https://github.com/mc10/shortlink.git"
license: "MIT"

build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]

run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]

depends: [
  "ocaml"
  "dune" { build & >= "1.5.0" }
  "core"
  "async"
  "cohttp"
  "cohttp-async"
  "ppxlib"
  "uri" { >= "2.0.0" }
]
